--- a/index.html
+++ b/index.html
@@ -25,24 +25,26 @@
     .wrap{max-width:1060px; margin:0 auto; padding:0 20px 56px}
 
     /* ヘッダー（薄い帯） */
-    .hero{
-      background:var(--header);
-      color:#fff;
-      padding:20px 24px;              /* ← 薄くしました */
-      border-radius:8px;
-      margin:20px 0 24px;             /* 余白も控えめに */
-    }
-    .hero h1{
-      margin:0 0 8px;
-      font-size:clamp(22px,4vw,34px);
-      letter-spacing:.02em;
-      font-weight:800;
-    }
-    .hero p{
-      margin:0;
-      font-size:clamp(14px,2.2vw,16px);
-      color:#eef2f7;                  /* 説明は少し明るめの白 */
-    }
+    .hero {
+  background: var(--header);
+  color:#fff;
+  padding:12px 20px;      /* ← 上下の余白を 20px → 12px に圧縮 */
+  border-radius:8px;
+  margin:16px 0 20px;     /* ← 周囲の余白も控えめに */
+}
+
+.hero h1 {
+  margin:0 0 6px;         /* ← タイトル下の余白を 8px → 6px に */
+  font-size:clamp(22px,4vw,34px);
+  letter-spacing:.02em;
+  font-weight:800;
+}
+
+.hero p {
+  margin:0;
+  font-size:clamp(14px,2.2vw,16px);
+  color:#eef2f7;
+}
 
     /* リンク一覧（シンプル行） */
     .list{margin:12px 0 0; padding:0; list-style:none}
@@ -173,6 +175,7 @@
   </div>
 </body>
 </html>
+
 
 
 
