--- a/netlify-GitHub.html
+++ b/netlify-GitHub.html
@@ -27,12 +27,27 @@
     .wrap{max-width:1060px;margin:0 auto;padding:0 20px 56px}
 
     /* ヘッダー帯（ポータルと同じ雰囲気） */
-    .hero{
-      background:var(--header); color:#fff;
-      padding:4px 20px; border-radius:8px; margin:20px 0 12px;
-    }
-    .hero h1{margin:0 0 4px;font-size:clamp(22px,4vw,34px);font-weight:800}
-    .hero p{margin:0;color:#e8eef5;font-size:clamp(14px,2.2vw,16px)}
+    .hero {
+  background: var(--header);
+  color:#fff;
+  padding:12px 20px;      /* 上下を12pxに調整（高さを少し圧縮） */
+  border-radius:8px;
+  margin:16px 0 20px;
+}
+
+.hero h1 {
+  margin:0 0 6px;         /* 下に少し余白を残す */
+  font-size:clamp(22px,4vw,34px);
+  letter-spacing:.02em;
+  font-weight:800;
+}
+
+.hero p {
+  margin:0;
+  font-size:clamp(14px,2.2vw,16px);
+  color:#eef2f7;
+}
+
 
     /* 本文 */
     .content{display:grid;gap:16px}
@@ -131,6 +146,7 @@ git push origin main
   </div>
 </body>
 </html>
+
 
 
 
