--- a/netlify-GitHub.html
+++ b/netlify-GitHub.html
@@ -27,16 +27,16 @@
     .wrap{max-width:1060px;margin:0 auto;padding:0 20px 56px}
 
     /* ヘッダー帯（ポータルと同じ雰囲気） */
-    .hero {
+      .hero {
   background: var(--header);
   color:#fff;
-  padding:12px 20px;      /* 上下を12pxに調整（高さを少し圧縮） */
+  padding:12px 20px;      /* ← 上下の余白を 20px → 12px に圧縮 */
   border-radius:8px;
-  margin:16px 0 20px;
+  margin:16px 0 20px;     /* ← 周囲の余白も控えめに */
 }
 
 .hero h1 {
-  margin:0 0 6px;         /* 下に少し余白を残す */
+  margin:0 0 6px;         /* ← タイトル下の余白を 8px → 6px に */
   font-size:clamp(22px,4vw,34px);
   letter-spacing:.02em;
   font-weight:800;
@@ -47,6 +47,7 @@
   font-size:clamp(14px,2.2vw,16px);
   color:#eef2f7;
 }
+
 
 
     /* 本文 */
@@ -146,6 +147,7 @@ git push origin main
   </div>
 </body>
 </html>
+
 
 
 
