--- a/netlify-GitHub.html
+++ b/netlify-GitHub.html
@@ -27,23 +27,25 @@
     .wrap{max-width:1060px;margin:0 auto;padding:0 20px 56px}
 
     /* ヘッダー帯（ポータルと同じ雰囲気） */
-      .hero {
+      .hero{
   background: var(--header);
   color:#fff;
-  padding:12px 20px;      /* ← 上下の余白を 20px → 12px に圧縮 */
+  padding:12px 20px;      /* 高さは padding で管理（上下12px） */
   border-radius:8px;
-  margin:16px 0 20px;     /* ← 周囲の余白も控えめに */
+  margin:16px 0 20px;
 }
 
-.hero h1 {
-  margin:0 0 6px;         /* ← タイトル下の余白を 8px → 6px に */
+.hero h1{
+  margin:0 0 6px;         /* 見出し下の間隔は固定 */
+  line-height:1.15;       /* 行高を固定 → 折返し時の高さのブレを抑える */
   font-size:clamp(22px,4vw,34px);
   letter-spacing:.02em;
   font-weight:800;
 }
 
-.hero p {
+.hero p{
   margin:0;
+  line-height:1.6;        /* 説明文の行高も固定 */
   font-size:clamp(14px,2.2vw,16px);
   color:#eef2f7;
 }
@@ -147,6 +149,7 @@ git push origin main
   </div>
 </body>
 </html>
+
 
 
 
