--- a/netlify-GitHub.html
+++ b/netlify-GitHub.html
@@ -27,29 +27,18 @@
     .wrap{max-width:1060px;margin:0 auto;padding:0 20px 56px}
 
     /* ヘッダー帯（ポータルと同じ雰囲気） */
-     .hero {
-  background: var(--header);
-  color:#fff;
-  padding:12px 20px 8px;   /* ← 下だけ 8px に圧縮（上12px, 左右20px, 下8px） */
-  border-radius:8px;
-  margin:16px 0 20px;
+     .hero{
+  padding-top:12px !important;
+  padding-bottom:4px !important;   /* ← 下をグッと小さく（テスト値） */
 }
-
-.hero h1 {
-  margin:0 0 4px;          /* ← タイトル下の余白を 4px に */
-  line-height:1.15;
-  font-size:clamp(22px,4vw,34px);
-  letter-spacing:.02em;
-  font-weight:800;
+.hero h1{
+  margin-bottom:2px !important;    /* タイトル直下も最小限 */
+  line-height:1.12 !important;
 }
-
-.hero p {
-  margin:0;
-  line-height:1.6;
-  font-size:clamp(14px,2.2vw,16px);
-  color:#eef2f7;
+.hero p{
+  margin:0 !important;
+  line-height:1.45 !important;     /* 説明文の下側に“たまる”感じを抑える */
 }
-
 
 
     /* 本文 */
@@ -149,6 +138,7 @@ git push origin main
   </div>
 </body>
 </html>
+
 
 
 
