--- a/netlify-GitHub.html
+++ b/netlify-GitHub.html
@@ -27,25 +27,34 @@
     .wrap{max-width:1060px;margin:0 auto;padding:0 20px 56px}
 
     /* ヘッダー帯（ポータルと同じ雰囲気） */
-     .hero {
+    /* ヘッダー帯：上下を必ず均等にする */
+.hero{
   background: var(--header);
   color:#fff;
-  padding:12px 20px;      /* ← 上下の余白を 20px → 12px に圧縮 */
-  border-radius:8px;
-  margin:16px 0 20px;     /* ← 周囲の余白も控えめに */
+  /* 上下同値で厳密に管理 */
+  padding-block: 12px;          /* = top 12px / bottom 12px */
+  padding-inline: 20px;
+  border-radius: 8px;
+  margin: 16px 0 20px;
+
+  /* 子要素間の距離は gap で管理（行間の影響を受けない） */
+  display: grid;
+  row-gap: 6px;
 }
 
-.hero h1 {
-  margin:0 0 6px;         /* ← タイトル下の余白を 8px → 6px に */
-  font-size:clamp(22px,4vw,34px);
-  letter-spacing:.02em;
-  font-weight:800;
+.hero h1{
+  margin: 0;                    /* 既定の余白をリセット */
+  line-height: 1.10;            /* 下側に出やすい余白を抑える */
+  font-size: clamp(22px, 4vw, 34px);
+  letter-spacing: .02em;
+  font-weight: 800;
 }
 
-.hero p {
-  margin:0;
-  font-size:clamp(14px,2.2vw,16px);
-  color:#eef2f7;
+.hero p{
+  margin: 0;                    /* 既定の余白をリセット */
+  line-height: 1.35;            /* 見た目の下側余白を抑える */
+  font-size: clamp(14px, 2.2vw, 16px);
+  color: #eef2f7;
 }
 
     /* 本文 */
@@ -145,6 +154,7 @@ git push origin main
   </div>
 </body>
 </html>
+
 
 
 
