--- a/index.html
+++ b/index.html
@@ -168,6 +168,16 @@
             <span class="arrow">→</span>
           </a>
         </li>
+        <li>
+          <a class="item" href="patent-strategy.html" aria-label="特許戦略を開く">
+            <span class="dot"></span>
+            <div class="meta">
+              <h3>🔗特許戦略</h3>
+              <p>分割出願のメリット。</p>
+            </div>
+            <span class="arrow">→</span>
+          </a>
+        </li>
       </ul>
     </main>
 
@@ -175,6 +185,7 @@
   </div>
 </body>
 </html>
+
 
 
 
