--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
     <span class="arrow">→</span>
   </a>
 </li>
+
+        <li>
+  <a class="item" href="vagalhealer-report.pdf" target="_blank" aria-label="Vagal Healer Repot PDFを開く">
+    <span class="dot"></span>
+    <div class="meta">
+      <h3>📄Vagal Healer Report</h3>
+      <p>Vagal Healerと自律神経。</p>
+    </div>
+    <span class="arrow">→</span>
+  </a>
+</li>
+        
         <li>
           <a class="item" href="netlify-GitHub.html" aria-label="Netlify-GitHub連携を開く">
             <span class="dot"></span>
@@ -185,6 +197,7 @@
   </div>
 </body>
 </html>
+
 
 
 
